@@ -20,5 +20,6 @@ machine_pmax.cc  Digital DECstation ("PMAX") machines
 machine_pmppc.cc  Artesyn's PM/PPC board
 machine_prep.cc  Machines conforming to the PowerPC Reference Platform specs
 machine_qemu.cc  Machine mimicing QEMU's default MIPS emulation mode
+machine_rpi.cc  Raspberry Pi
 machine_sgi.cc  Silicon Graphics' MIPS-based machines
 machine_test.cc  Various test machines
